[package]
name = "logram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.20", features = ["derive"] }
clap_derive = "=4.0.20"
clap_lex = "=0.3.0"
dashmap = "=5.5.3"
regex = "1"
